[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-checker"
version = "0.2.0"
description = "High-security multi-TLD domain availability checker with 193 TLDs support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jonas (FlexKleks)", email = "info@flex.pm"}
]
maintainers = [
    {name = "Jonas (FlexKleks)", email = "info@flex.pm"}
]
keywords = ["domain", "availability", "rdap", "whois", "checker", "telegram", "discord", "notifications"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "idna>=3.4",
]

[project.urls]
Homepage = "https://github.com/FlexKleks/DomainChecker"
Repository = "https://github.com/FlexKleks/DomainChecker"
Issues = "https://github.com/FlexKleks/DomainChecker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.88.0",
]

[project.scripts]
domain-checker = "domain_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hypothesis]
max_examples = 100
